tests/compile-fail/function_pointers/cast_fn_ptr2.stderr
error: Undefined Behavior: calling a function with argument of type (i32, i32) passing data of type i32
 --> $DIR/cast_fn_ptr2.rs:8:5
  |
8 |     g(42) //~ ERROR calling a function with argument of type (i32, i32) passing data of type i32
  |     ^^^^^ calling a function with argument of type (i32, i32) passing data of type i32
  |
  = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
  = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
          
  = note: inside `main` at $DIR/cast_fn_ptr2.rs:8:5

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

